--- a/html/11-arrays-and-loops.html
+++ b/html/11-arrays-and-loops.html
@@ -53,7 +53,7 @@
     }
 
     console.log(randomNumber);
-     */
+    
 
     const todoList = [
       'make dinner', 
@@ -65,9 +65,25 @@
       const value = todoList[index];
       console.log(value); 
     }
+ */
 
-    for (i in todoList) {
-      console.log()
+    const nums = [1, 1, 3];
+    let total = 0;
+
+    for (let i = 0; i < nums.length; i++) {
+      const num = nums[i];
+      total += num;
     }
+    console.log(total);
+
+    const numsDoubled = [];
+
+    for (let i = 0; i < nums.length; i++) {
+      const num = nums[i]
+      numsDoubled.push(num * 2);
+    }
+      console.log(numsDoubled) 
+
+      
   </script>
 </html>
