--- a/html/11-todo-list.html
+++ b/html/11-todo-list.html
@@ -5,7 +5,7 @@
     <script src="/scripts/11-todo-list.js"></script>
   </head>
 
-  <body
+  <body>
     <p>Todo List Practice 1</p>
     <input class="js-name-input" onkeydown="
       handleKeyDown(event);" type="text" placeholder="Todo name">
