--- a/Excercises/11a - Array & Loops.html
+++ b/Excercises/11a - Array & Loops.html
@@ -12,7 +12,14 @@
       nums[2] = 99;
 
       console.log(nums);
-      
+
+
+      function getLastValue(array) {
+        const value = array.length - 1;
+        return array[value];
+      }
+
+      console.log(getLastValue([1, 20, 22, 24, 0]))
     </script>
     
   </body>
