--- a/Excercises/11i - Loops2 .html
+++ b/Excercises/11i - Loops2 .html
@@ -7,6 +7,7 @@
   <body>
 
     <script>
+      /*
       function addNum(array, num) {
         const result = []
 
@@ -17,6 +18,35 @@
       }
 
       console.log(addNum([1, 2, 3], 2))
+
+      function addArrays(array1, array2) {
+        const result = [];
+
+        for (let i = 0; i < array1.length; i++) {
+          result.push(array1[i] + array2[i]);
+        }
+
+        return result
+      }
+
+      console.log(addArrays([1,2,3],[4,6,5]))
+
+      function countPositive(nums) {
+        let result = 0;
+
+        for (let i = 0; i < nums.length; i++) {
+          if (nums[i] > 0) {
+            result++;
+          }
+        }
+
+        return result;
+      }
+      
+      console.log(countPositive([1, -3, 5]));
+      //console.log(countPositive([-2, 3, -5, 7, 10]));
+      */
+
     </script>
     
   </body>
