--- a/Excercises/11i - Loops2 .html
+++ b/Excercises/11i - Loops2 .html
@@ -45,8 +45,23 @@
       
       console.log(countPositive([1, -3, 5]));
       //console.log(countPositive([-2, 3, -5, 7, 10]));
-      */
 
+
+      function squareDigits(num){
+        for (let i = 0; i < num.length; i++) {
+          console.log(num[i] ** 2)
+        }
+      }
+
+      squareDigits(12)
+            */
+
+    function nameShuffler(str){
+      //Shuffle It
+      return str.split("")
+    }
+
+    console.log(nameShuffler('john'))
     </script>
     
   </body>
