--- a/Excercises/11i - Loops2 .html
+++ b/Excercises/11i - Loops2 .html
@@ -7,61 +7,38 @@
   <body>
 
     <script>
-      /*
       function addNum(array, num) {
-        const result = []
-
+        let newArray = [];
         for (let i = 0; i < array.length; i++) {
-          result.push(array[i] + num)
+          newArray.push(array[i] + num);
         }
-        return result
+        return newArray;
       }
 
-      console.log(addNum([1, 2, 3], 2))
+      console.log(addNum([-2, -1 , 0, 99], 2));
 
       function addArrays(array1, array2) {
-        const result = [];
-
+        let newArray = [];
         for (let i = 0; i < array1.length; i++) {
-          result.push(array1[i] + array2[i]);
-        }
-
-        return result
+        newArray.push(array1[i] + array2[i])
       }
+      return newArray;
+    }
+      console.log(addArrays([1, 2, 3], [4, 5, 6]));
 
-      console.log(addArrays([1,2,3],[4,6,5]))
-
-      function countPositive(nums) {
-        let result = 0;
-
-        for (let i = 0; i < nums.length; i++) {
-          if (nums[i] > 0) {
-            result++;
-          }
-        }
-
-        return result;
-      }
-      
-      console.log(countPositive([1, -3, 5]));
-      //console.log(countPositive([-2, 3, -5, 7, 10]));
-
-
-      function squareDigits(num){
-        for (let i = 0; i < num.length; i++) {
-          console.log(num[i] ** 2)
+    function countPositive(nums) {
+      let result = 0;
+      for (let i = 0; i < nums.length; i++) {
+        if (nums[i] > 0) {
+          result++;
         }
       }
-
-      squareDigits(12)
-            */
-
-    function nameShuffler(str){
-      //Shuffle It
-      return str.split("")
+      return result;
     }
 
-    console.log(nameShuffler('john'))
+    console.log(countPositive([1, -3, 9]))
+
+
     </script>
     
   </body>
