--- a/html/11-todo-list.html
+++ b/html/11-todo-list.html
@@ -9,6 +9,7 @@
     <p>Todo List Practice 1</p>
     <input class="js-name-input" onkeydown="
       handleKeyDown(event);" type="text" placeholder="Todo name">
+    <input type="date">
     <button onclick="addTodo()"
     >Add</button>
 
