--- a/html/11-todo-list.html
+++ b/html/11-todo-list.html
@@ -3,17 +3,22 @@
   <head>
     <title>Todo List</title>
     <script src="/scripts/11-todo-list.js"></script>
+    <link rel ="stylesheet" href="/styles/11-todo-list.css">
   </head>
 
   <body>
     <p>Todo List Practice 1</p>
-    <input class="js-name-input" onkeydown="
-      handleKeyDown(event);" type="text" placeholder="Todo name">
-    <input type="date">
-    <button onclick="addTodo()"
-    >Add</button>
 
-    <div class="js-todo-list"></div>
+    <div class="to-input-grid">
+      <input class="js-name-input name-input" onkeydown="
+      handleKeyDown(event);" type="text" placeholder="Todo name">
+      <input type="date" class="js-due-date-input due-date-input">
+      <button class="add-button" onclick="addTodo()"
+      >Add</button>
+    </div>
+    
+
+    <div class="js-todo-list todo-grid"></div>
     
   </body>
 
