--- a/html/12 -rock-paper-scissors.html
+++ b/html/12 -rock-paper-scissors.html
@@ -39,6 +39,8 @@
         updateScoreElement()
       " class="reset-score-button">Reset Score</button>
 
+      <button class="auto-play-button">Auto Play</button>
+
     </p>
 
     <script src="/scripts/12-rock-paper-scissors.js"></script>
