--- a/html/12 -rock-paper-scissors.html
+++ b/html/12 -rock-paper-scissors.html
@@ -39,7 +39,9 @@
         updateScoreElement()
       " class="reset-score-button">Reset Score</button>
 
-      <button class="auto-play-button">Auto Play</button>
+      <button class="auto-play-button" onclick="
+        autoPlay();
+      ">Auto Play</button>
 
     </p>
 
