--- a/html/12-todo-list .html
+++ b/html/12-todo-list .html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Todo List</title>
-    <script src="/scripts/11-todo-list.js"></script>
-    <link rel ="stylesheet" href="/styles/11-todo-list.css">
+    <title>Todo List 2</title>
+    <link rel ="stylesheet" href="/styles/12-todo-list .css">
   </head>
 
   <body>
@@ -20,6 +19,7 @@
 
     <div class="js-todo-list todo-grid"></div>
     
+    <script src="/scripts/12-todo-list .js"></script>
   </body>
 
 </html>
