--- a/html/12-advanced-functions.html
+++ b/html/12-advanced-functions.html
@@ -68,6 +68,9 @@
         'wash dishes',
         'watch youtube'
       ].forEach(function(value, index) {
+        if (value === 'wash dishes'){
+          return;
+        }
         console.log(index);
         console.log(value);
       });
