--- a/Excercises/12a-Advanced-functions.html
+++ b/Excercises/12a-Advanced-functions.html
@@ -7,8 +7,14 @@
   <body>
 
     <button id="start-button" onclick="setTimeout(function() {
-       document.querySelector('#start-button').innerHTML = 'Finished!'
+       document.querySelector('#start-button').innerHTML = 'Loading!'
     },1000)">Start</button>
+
+    <button id="start2-button" onclick="setTimeout(function() {
+      document.querySelector('#start2-button').innerHTML = 'Loading!'
+    },setTimeout(function() {
+      document.querySelector('#start2-button').innerHTML = 'Finsihed!'
+    },1000))">Start</button>
 
     <script>
       const add = function() {
