--- a/Excercises/12a-Advanced-functions.html
+++ b/Excercises/12a-Advanced-functions.html
@@ -2,6 +2,16 @@
 <html>
   <head>
     <title>Advanced Functions</title>
+    <style>
+      #start-button, #start2-button{
+        background-color: darkred;
+        border: none;
+        color: white;
+        padding: 5px 10px 5px 10px;
+        width: 80px;
+        cursor: pointer;
+      }
+    </style>
   </head>
 
   <body>
