--- a/Excercises/12a-Advanced-functions.html
+++ b/Excercises/12a-Advanced-functions.html
@@ -11,6 +11,19 @@
         width: 80px;
         cursor: pointer;
       }
+
+      #start-button{
+        margin-bottom: 20px;
+      }
+
+      #start3-button{
+        background-color: darkred;
+        border: none;
+        color: white;
+        padding: 5px 10px 5px 10px;
+        width: 100px;
+        cursor: pointer;
+      }
     </style>
   </head>
 
@@ -25,6 +38,17 @@
     },setTimeout(function() {
       document.querySelector('#start2-button').innerHTML = 'Finsihed!'
     },1000))">Start</button>
+
+    <br>
+
+    <button id="start3-button" onclick="
+      setTimeout(function () {document.querySelector('.result-text')
+      .innerHTML = 'Added'}, setTimeout(function () {
+        document.querySelector('.result-text')
+      .innerHTML = '';
+      },2000))
+    ">Add to cart</button>
+    <p class="result-text"></p>
 
     <script>
       const add = function() {
