12g Advanced Functions 2 - Intial

--- a/Excercises/12g - Advanced-functions.html
+++ b/Excercises/12g - Advanced-functions.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Advanced Functions</title>
+    <title>Advanced Functions 2</title>
   </head>
 
   <body>
+
+    <script>
+      
+    </script>
 
   </body>
 </html>
