--- a/Excercises/12g - Advanced-functions.html
+++ b/Excercises/12g - Advanced-functions.html
@@ -7,7 +7,9 @@
   <body>
 
     <script>
-      
+      setInterval(function() {
+        document.title = 'App';
+      }, 1000)
     </script>
 
   </body>
