--- a/html/12-advanced-functions.html
+++ b/html/12-advanced-functions.html
@@ -61,7 +61,7 @@
        }, 3000);
 
        console.log('next line 2');
-        */
+  
 
       [
         'make dinner',
@@ -74,6 +74,26 @@
         console.log(index);
         console.log(value);
       });
+
+  
+     message === 0 ? 'yes' : message > 1 ? 'yesno' : 'no';
+     message = 0 || message - 3 ? 'dd' : 'wdw'
+       */
+
+      const regularFunction = function(param, param2) {
+        console.log('hello regular');
+        return 5;
+      }
+
+      const arrowFunction = (param, param2) => {
+        console.log('hello');
+        return 5;
+      }
+      arrowFunction();
+
+      const oneParam = () => {
+
+      }
     </script>
   </body>
 </html>
