Arrow function in 12 - RPS

--- a/html/12-advanced-functions.html
+++ b/html/12-advanced-functions.html
@@ -62,23 +62,27 @@
 
        console.log('next line 2');
   
+     */
+
+      tobi = () => {
+        console.log('ys');
+      }
 
       [
         'make dinner',
         'wash dishes',
         'watch youtube'
-      ].forEach(function(value, index) {
-        if (value === 'wash dishes'){
-          return;
+      ].forEach((value, index) => {
+          if (value === 'wash dishes'){
+            return;
         }
+
         console.log(index);
         console.log(value);
       });
 
   
-     message === 0 ? 'yes' : message > 1 ? 'yesno' : 'no';
-     message = 0 || message - 3 ? 'dd' : 'wdw'
-       */
+  
 
       const regularFunction = function(param, param2) {
         console.log('hello regular');
@@ -91,9 +95,14 @@
       }
       arrowFunction();
 
-      const oneParam = () => {
+      const oneParam = param => {
+        console.log(param + 1);
+      };
 
-      }
+      oneParam(2);
+
+      const oneLine = () =>  2 + 3; 
+      console.log(oneLine());
     </script>
   </body>
 </html>
