12-Advanced Functions - EventListener

--- a/html/12-advanced-functions.html
+++ b/html/12-advanced-functions.html
@@ -5,7 +5,25 @@
   </head>
 
   <body>
+
+    <button onclick="" id="js-button">Click</button>
+
     <script>
+
+      const buttonElement = document.getElementById('js-button');   
+
+      const EventListener = () => {
+        console.log('click');
+      }
+      buttonElement.addEventListener('click', EventListener);
+
+      buttonElement.removeEventListener('click',EventListener);
+
+      buttonElement.addEventListener('click', () => 
+      {
+        console.log('click2');
+      });
+
       /*
       function greeting() {
         console.log('hello');
@@ -61,8 +79,7 @@
        }, 3000);
 
        console.log('next line 2');
-  
-     */
+
 
       tobi = () => {
         console.log('ys');
@@ -103,6 +120,17 @@
 
       const oneLine = () =>  2 + 3; 
       console.log(oneLine());
+
+      const object2 = {
+        method : () => {
+
+        }, 
+        method() {
+
+        }
+      }
+          
+     */
     </script>
   </body>
 </html>
