Adding EventListener to 12-RPS

--- a/html/12 -rock-paper-scissors.html
+++ b/html/12 -rock-paper-scissors.html
@@ -12,17 +12,11 @@
     <p class="title">Rock Paper Scissors</p>
 
     <p>
-      <button onclick="
-        playGame('rock')
-        " class="move-button"><img class="move-icon" src="/imageResources/rock-emoji.png"></button>
+      <button class="move-button js-rock-button"><img class="move-icon" src="/imageResources/rock-emoji.png"></button>
 
-      <button onclick="
-          playGame('paper')
-        " class="move-button"><img class="move-icon" src="/imageResources/paper-emoji.png"></button>
+      <button class="move-button js-paper-button"><img class="move-icon" src="/imageResources/paper-emoji.png"></button>
 
-      <button onclick="
-        playGame('scissors');
-      " class="move-button"><img class="move-icon" src="/imageResources/scissors-emoji.png"></button>
+      <button class="move-button js-scissors-button"><img class="move-icon" src="/imageResources/scissors-emoji.png"></button>
 
       <p class="js-result"></p>
 
