--- a/html/12-todo-list .html
+++ b/html/12-todo-list .html
@@ -12,8 +12,7 @@
       <input class="js-name-input name-input" onkeydown="
       handleKeyDown(event);" type="text" placeholder="Todo name">
       <input type="date" class="js-due-date-input due-date-input">
-      <button class="add-button" onclick="addTodo()"
-      >Add</button>
+      <button class="add-button js-add-button">Add</button>
     </div>
     
 
