--- a/html/12-advanced-functions.html
+++ b/html/12-advanced-functions.html
@@ -9,7 +9,8 @@
     <button id="js-button">Click</button>
 
     <script>
-
+      
+      /*
       const buttonElement = document.getElementById('js-button');   
 
       const EventListener = () => {
@@ -24,7 +25,6 @@
         console.log('click2');
       });
 
-      /*
       function greeting() {
         console.log('hello');
       }
@@ -131,6 +131,24 @@
       }
           
      */
+
+     console.log([1, -3, 5].filter((value, index) => {
+      /*
+      if (value >= 0) {
+        return true;
+      } else {
+        return false;
+      }
+      */
+      return value >= 0 ? true : false;
+     }));
+
+      console.log([1, 1, 3].map((value, index) => {
+        return value *= 2;
+      }));
+
+      console.log([1, 1, 3].map(value => value *= 2));
+
     </script>
   </body>
 </html>
