--- a/Excercises/12j - Advanced-functions.html
+++ b/Excercises/12j - Advanced-functions.html
@@ -11,7 +11,18 @@
 
       console.log(multiply(7, 10));
 
-      
+      function countPositive(nums){
+        let count = []
+        nums.forEach((value,index) => {
+          if (value >= 0) {
+            count.push(value);
+          }})
+
+        return count.length;
+      }
+
+      console.log(countPositive([1, -3, 5]));
+      console.log(countPositive([-2, 3, -5, 7, 10]));
     </script>
     
   </body>
