--- a/Excercises/12j - Advanced-functions.html
+++ b/Excercises/12j - Advanced-functions.html
@@ -23,6 +23,12 @@
 
       console.log(countPositive([1, -3, 5]));
       console.log(countPositive([-2, 3, -5, 7, 10]));
+
+      function addNum(array, num){
+        console.log(array.map(value => {return value + num; }))
+      }
+
+      addNum([1, 2, 3], 2);
     </script>
     
   </body>
