--- a/Excercises/12g - Advanced-functions.html
+++ b/Excercises/12g - Advanced-functions.html
@@ -14,7 +14,7 @@
       */
 
       let messages = 2;
-      setInterval(function() 
+      setInterval(() =>
       {
         if (messages === 0) {
           document.title = 'App';
@@ -29,7 +29,7 @@
       if (messages >= 0) {
         //document.title = 'App';
         messages++
-        setInterval(function() {
+        setInterval(() => {
           document.title = `(${messages}) New messages`
         }, 1000)
       }
@@ -38,7 +38,7 @@
     <button onclick="
       if (messages > 0) {
         messages--
-        setInterval(function() {
+        setInterval(() => {
           document.title = `(${messages}) New messages`
         }, 1000)
       }
