12p & 12q - (addEventListener & arrow functions)

--- a/Excercises/12a - Advanced-functions.html
+++ b/Excercises/12a - Advanced-functions.html
@@ -29,45 +29,61 @@
 
   <body>
 
-    <button id="start-button" onclick="setTimeout(function() {
-       document.querySelector('#start-button').innerHTML = 'Loading!'
-    },1000)">Start</button>
+    <button id="start-button" onclick="">Start</button>
 
-    <button id="start2-button" onclick="setTimeout(()=> {
-      document.querySelector('#start2-button').innerHTML = 'Loading!'
-    },setTimeout(() => {
-      document.querySelector('#start2-button').innerHTML = 'Finsihed!'
-    },1000))">Start</button>
+    <button id="start2-button" onclick="">Start</button>
 
     <br>
 
-    <button id="start3-button" onclick="
-      setTimeout(() => {document.querySelector('.result-text')
-      .innerHTML = 'Added'}, setTimeout(() => {
-        document.querySelector('.result-text')
-      .innerHTML = '';
-      },2000))
-    ">Add to cart</button>
+    <button id="start3-button">Add to cart</button>
     <p class="result-text"></p>
 
 
 
     <script>
-      const add = function() {
-        console.log(2 + 3);
-      }
+      /*
+        const add = function() {
+          console.log(2 + 3);
+        }
 
-      add();
-      add();
+        add();
+        add();
 
-      function runTwice(fun) {
-        fun();
-      }
+        function runTwice(fun) {
+          fun();
+        }
 
-      runTwice(function() {
-        console.log('12b');
-        console.log('12b');
-      })
+        runTwice(function() {
+          console.log('12b');
+          console.log('12b');
+        })
+
+      */
+
+      document.getElementById('start-button')
+        .addEventListener('click', () => {
+          setTimeout(() => {
+          document.querySelector('#start-button').innerHTML = 'Finished!'
+        },1000)
+        })
+
+      document.getElementById('start2-button')
+        .addEventListener('click', () => {
+          setTimeout(()=> {
+          document.querySelector('#start2-button').innerHTML = 'Loading!'
+        },setTimeout(() => {
+          document.querySelector('#start2-button').innerHTML = 'Finsihed!'
+        },1000))
+        } )
+
+      document.getElementById('start3-button')
+        .addEventListener('click', () => {
+          setTimeout(() => {document.querySelector('.result-text')
+          .innerHTML = 'Added'}, setTimeout(() => {
+            document.querySelector('.result-text')
+          .innerHTML = '';
+          },2000))
+        } )
     
     </script>
     
