--- a/Excercises/12g - Advanced-functions.html
+++ b/Excercises/12g - Advanced-functions.html
@@ -5,43 +5,50 @@
   </head>
 
   <body>
+    <button id="add-button">Add</button> 
+    <button id="remove-button">Remove</button>
 
-    <script>
-      /*
-      setInterval(function() {
-        document.title = 'App';
-      }, 1000)
-      */
-
-      let messages = 2;
-      setInterval(() =>
-      {
-        if (messages === 0) {
+      <script>
+        /*
+        setInterval(function() {
           document.title = 'App';
-        } 
-        else {
-            document.title = `(${messages}) New messages`
-        }
-      }, 1000)
-    </script>
-
-    <button onclick="
-      if (messages >= 0) {
-        //document.title = 'App';
-        messages++
-        setInterval(() => {
-          document.title = `(${messages}) New messages`
         }, 1000)
-      }
+        */
 
-    ">Add</button> 
-    <button onclick="
-      if (messages > 0) {
-        messages--
-        setInterval(() => {
-          document.title = `(${messages}) New messages`
+        let messages = 2;
+        setInterval(() =>
+        {
+          if (messages === 0) {
+            document.title = 'App';
+          } 
+          else {
+              document.title = `(${messages}) New messages`
+          }
         }, 1000)
-      }
-    ">Remove</button>
+
+        document.getElementById('add-button')
+          .addEventListener('click', () => {
+            if (messages >= 0) {
+            //document.title = 'App';
+            messages++
+            setInterval(() => {
+              document.title = `(${messages}) New messages`
+            }, 1000)
+            }
+          })
+
+        document.getElementById('remove-button')
+          .addEventListener('click', () => {
+            if (messages > 0) {
+            messages--
+            setInterval(() => {
+              document.title = `(${messages}) New messages`
+            }, 1000)
+          } else if (messages === 0) {
+            setInterval(() => 
+            {document.title = 'App'}, 1000);
+          }})
+      </script>
+
   </body>
 </html>
