12s - Eventlistener in RPS

--- a/Excercises/12r -rock-paper-scissors.html
+++ b/Excercises/12r -rock-paper-scissors.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="/Excercises/styles/12r-rock-paper-scissors.css">
 
-    <title>20 - Rock Paper Scissors</title>
+    <title>12r - Rock Paper Scissors</title>
     
   </head>
 
@@ -33,13 +33,11 @@
         updateScoreElement()
       " class="reset-score-button">Reset Score</button>
 
-      <button class="auto-play-button" onclick="
-        autoPlay();
-      ">Auto Play</button>
+      <button class="auto-play-button">Auto Play</button>
 
     </p>
 
-    <script src="/Excercises/js-scripts/12r-todo-list .js"></script>
+    <script src="/Excercises/js-scripts/12r-rock-paper-scissors.js"></script>
 
   </body>
 </html>
