--- a/Excercises/12r -rock-paper-scissors.html
+++ b/Excercises/12r -rock-paper-scissors.html
@@ -25,13 +25,7 @@
 
       <p class="js-score"></p>
 
-      <button onclick="
-        score.wins = 0;
-        score.losses = 0;
-        score.ties = 0;
-        localStorage.removeItem('score');
-        updateScoreElement()
-      " class="reset-score-button">Reset Score</button>
+      <button class="reset-score-button">Reset Score</button>
 
       <button class="auto-play-button">Auto Play</button>
 
