--- a/Excercises/12r -rock-paper-scissors.html
+++ b/Excercises/12r -rock-paper-scissors.html
@@ -29,6 +29,8 @@
 
       <button class="auto-play-button">Auto Play</button>
 
+      <div id="confirmation-message"></div>
+
     </p>
 
     <script src="/Excercises/js-scripts/12r-rock-paper-scissors.js"></script>
